Moved the country selector inside the GMap

--- a/frontend/assets/scss/base/_base.scss
+++ b/frontend/assets/scss/base/_base.scss
@@ -5,6 +5,7 @@
 html {
   box-sizing: border-box;
   font-family: 'Open Sans';
+  line-height: 1.2;
   background-color: rgba(243, 243, 243, 0.3);
 
   &, body, #__nuxt, #__layout {
