--- a/frontend/assets/scss/base/_base.scss
+++ b/frontend/assets/scss/base/_base.scss
@@ -17,3 +17,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Slab';
   text-align: center;
 }
+
+input, button {
+  border: 1px solid black;
+}
