--- a/frontend/assets/scss/base/_base.scss
+++ b/frontend/assets/scss/base/_base.scss
@@ -18,6 +18,51 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-input, button {
-  border: 1px solid black;
+input {
+  padding: 2px;
+  border-radius: 4px;
+  border: 1px solid #923CB5;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #44355B;
+  opacity: 1; /* Firefox */
+}
+
+button {
+  cursor: pointer;
+}
+
+.btn {
+  padding: 3px 4px;
+  border-radius: 3px;
+  color: #fff;
+
+  &:disabled {
+    background-color: #aaa;
+  }
+
+  &:hover {
+    opacity: 0.85;
+  }
+
+  &:active {
+    box-shadow: inset 0 3px 4px hsla(0, 0%, 0%, 0.2);
+  }
+
+  &:focus {
+    outline: thin dotted #444;
+    outline: 5px auto -webkit-focus-ring-color;
+  }
+
+  &-primary {
+    background-color: #355e3b;
+  }
+
+  &-secondary {
+    background-color: #e98724;
+  }
+
+  &-danger {
+    background-color: #b80f0a;
+  }
 }
