--- a/frontend/assets/scss/components/_container.scss
+++ b/frontend/assets/scss/components/_container.scss
@@ -7,5 +7,13 @@
   form {
     margin-top: 15px;
     padding: 6px;
+
+    .form-footer {
+      display: flex;
+      
+      span {
+        margin: 0 5px;
+      }
+    }
   }
 }
