--- a/frontend/assets/scss/abstracts/_variables.scss
+++ b/frontend/assets/scss/abstracts/_variables.scss
@@ -4,8 +4,8 @@ $grid-bp-lg: 'lg';
 $grid-bp-xl: 'xl';
 
 $grid-breakpoints: (
-  $grid-bp-sm: 576,
-  $grid-bp-md: 768,
-  $grid-bp-lg: 992,
-  $grid-bp-xl: 1200
+  $grid-bp-sm: 576px,
+  $grid-bp-md: 768px,
+  $grid-bp-lg: 992px,
+  $grid-bp-xl: 1200px
 );
