--- a/frontend/assets/scss/base/_base.scss
+++ b/frontend/assets/scss/base/_base.scss
@@ -23,6 +23,10 @@ input {
   padding: 2px;
   border-radius: 4px;
   border: 1px solid #923CB5;
+
+  &:disabled {
+    cursor: default;
+  }
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: #44355B;
